src/test/ui/init-unsafe.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/init-unsafe.rs:8:17
   |
LL |     let stuff = init::<isize>();
   |                 ^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
